# KnLangChain

./: Dockerfile  pyproject.toml  training.txt
src/com/kun/: CallMilvus.py  CallPgVectgor.py  CallPgVectgorRs.py
src/com/kun/celerytest/: app.py  task.py
src/com/kun/dbmeta/: get_meta.py
src/com/kun/fastapi/: main.py  stream.py
src/com/kun/itest/: mycal.py  mycalbase.py  myexec.py
src/com/kun/langchain_retrivers/: CallEmbedding.py  PubMedTest.py  WikiTest.py  bm25Test.py
src/com/kun/myopenai/: mycallcompletion.py  myembedding.py
src/com/kun/pydantictest/: .env  config.py  read_config.py
